--- a/app/src/main/res/layout/activity_heavy_setting.xml
+++ b/app/src/main/res/layout/activity_heavy_setting.xml
@@ -144,7 +144,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:min="50"
-            android:max="300"
+            android:max="200"
             />
     </FrameLayout>
     <TextView
@@ -303,7 +303,7 @@
 
     <TextView
         style="@style/ItemTitle"
-        android:id="@+id/tv_tempo"
+        android:id="@+id/tv_disp_tempo"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:text="0"
