--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="screen_back">#194B4B</color>
-    <color name="ui_back">#C3B87B</color>
+    <color name="screen_back">#0C2020</color>
+    <color name="ui_back">#BAA65F</color>
     <color name="button">#194B4B</color>
     <color name="button_pale">#598181</color>
     <color name="secondary">#735356</color>
