--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,8 +19,10 @@
     <style name="Material.RadiusButton" parent="Widget.MaterialComponents.Button">
         <item name="backgroundTint">@color/button</item>
         <item name="rippleColor">@color/teal_200</item>
-        <item name="android:layout_height">35dp</item>
+        <item name="android:layout_height">30dp</item>
         <item name="android:layout_width">wrap_content</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
         <item name="cornerRadius">6dp</item>
         <item name="android:textSize">15sp</item>
         <item name="fontFamily">@font/playfair_regular</item>
