--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,6 @@
     <color name="screen_back">#0C2020</color>
     <color name="ui_back">#BAA65F</color>
     <color name="button">#194B4B</color>
-    <color name="button_pale">#598181</color>
+    <color name="button_pale">#5B7171</color>
     <color name="secondary">#735356</color>
 </resources>
